syntax = "proto3";

package pb;
option go_package="./api/v1;pb";

service BillService {
    rpc Ping (BillRequest) returns (BillResponse) {};
    rpc CreateBill (CreateBillRequest) returns (CreateBillResponse) {};
    rpc GetBill (GetBillRequest) returns (GetBillResponse) {};
    rpc UpdateBill (UpdateBillRequest) returns (UpdateBillResponse) {};
    rpc DeleteBill (DeleteBillRequest) returns (DeleteBillResponse) {};
    rpc ListBills (ListBillsRequest) returns (ListBillsResponse) {};
}

message Bill {
    int64 id = 1;
    
    int32 Bill = 2;
    
}

message CreateBillRequest {
    Bill bill = 1;
}

message CreateBillResponse {
    string message = 1;
}

message GetBillRequest {
    int64 id = 1;
}

message GetBillResponse {
    Bill bill = 1;
}

message UpdateBillRequest {
    int64 id = 1;
    Bill bill = 2;
}

message UpdateBillResponse {
    string message = 1;
}

message DeleteBillRequest {
    int64 id = 1;
}

message DeleteBillResponse {
    string message = 1;
}

message ListBillsRequest {

}

message ListBillsResponse {
    repeated Bill bill = 1;
}

message BillRequest {}

message BillResponse {
    string message = 1; 
}